Fix long words causing horizontal scroll

--- a/assets/sass/guides/_asciidoctor.scss
+++ b/assets/sass/guides/_asciidoctor.scss
@@ -334,7 +334,8 @@ p {
     font-size: 1em;
     line-height: 1.6;
     margin-bottom: 1.25em;
-    text-rendering: optimizeLegibility
+    text-rendering: optimizeLegibility;
+    word-break: break-word;
 }
 
 p aside {
